tests/invalid/res_2.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Res_2

// Undeclared resource.
func zort() uses Fipbib -> Int {
    return 42
}

